--- a/src/index.hbs
+++ b/src/index.hbs
@@ -70,8 +70,6 @@
 {{!-- ----------------- --}}
 
 {{!-- SECTION CCP START --}}
-
-
 <section class="ccp">
   <div class="ccp__wrapper">
     
@@ -213,6 +211,25 @@
     </div>
   </div>
 </section>
- 
-
 {{!-- SECTION CCP END --}}
+
+{{!-- ----------------- --}}
+
+{{!-- SECTION PROMO START --}}
+<section class="promoann">
+  <div class="promoann__wrapper">
+    
+    <div class="promoann__hdrpromo">
+      <h3>Promotions Annoucement</h3>
+    </div>
+    <div class="promoann__descpromo">
+      <span>Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus, ac facilisis in, egestas eget quam praesent commodo cursus magna.</span>
+    </div>
+    <div class="promoann__movies">
+      
+    </div>
+
+
+  </div>
+</section>
+{{!-- SECTION PROMO END --}}
