--- a/src/index.hbs
+++ b/src/index.hbs
@@ -226,7 +226,25 @@
       <span>Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus, ac facilisis in, egestas eget quam praesent commodo cursus magna.</span>
     </div>
     <div class="promoann__movies">
-      
+      <div class="promoann__bch">
+        <div class="promoann__bchvideo">
+          <button><i class="fa fa-play" aria-hidden="true"></i></button>
+        </div>
+        <div class="promoann__bchdesc">
+          <div class="promoann__bchdescone">
+            <span>BCH Trading Pairs Open On</span>
+            <span>01:20</span>
+          </div>
+          <div class="promoann__bchdesctwo">
+            <span>BitMin With Big Promotions</span>
+          </div>
+        </div>
+      </div>
+      <div class="promoann__bitclave"></div>
+      <div class="promoann__annoucement"></div>
+      <div class="promoann__selfkey"></div>
+      <div class="promoann__canya"></div>
+      <div class="promoann__qlink"></div>
     </div>
 
 
