--- a/src/less/var.less
+++ b/src/less/var.less
@@ -1,9 +1,10 @@
 @border: 1px solid red;
 @colorred: #b92c34;
-@colorlightgray: #9a9697;
 @colordarkblue: #292a3c;
 @colorverydarkblue: #272637;
 @colorbluegray: #3a3a52;
 @colorbluetext: #3d2297;
 @colorgreen: #5da261;
+@colorlightgray: #9a9697;
+@colorgray: #555555;
 @transition: ease-in-out 0.5s;
