--- a/src/index.hbs
+++ b/src/index.hbs
@@ -225,7 +225,10 @@
     <div class="promoann__descpromo">
       <span>Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus, ac facilisis in, egestas eget quam praesent commodo cursus magna.</span>
     </div>
+    
+    
     <div class="promoann__movies">
+      
       <div class="promoann__bch">
         <div class="promoann__bchvideo">
           <button><i class="fa fa-play" aria-hidden="true"></i></button>
@@ -240,11 +243,80 @@
           </div>
         </div>
       </div>
-      <div class="promoann__bitclave"></div>
-      <div class="promoann__annoucement"></div>
-      <div class="promoann__selfkey"></div>
-      <div class="promoann__canya"></div>
-      <div class="promoann__qlink"></div>
+
+      <div class="promoann__bitclave">
+        <div class="promoann__bitclavevideo">
+          <button><i class="fa fa-play" aria-hidden="true"></i></button>
+        </div>
+        <div class="promoann__bitclavedesc">
+          <div class="promoann__bitclavedescone">
+            <span>Bitclave Gets Listed One</span>
+            <span>04:34</span>
+          </div>
+          <div class="promoann__bitclavedesctwo">
+            <span>BitMin With Promotions For User</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="promoann__annoucement">
+        <div class="promoann__annoucementvideo">
+          <button><i class="fa fa-play" aria-hidden="true"></i></button>
+        </div>
+        <div class="promoann__annoucementdesc">
+          <div class="promoann__annoucementdescone">
+            <span>Annoucement Regarding</span>
+            <span>02:40</span>
+          </div>
+          <div class="promoann__annoucementdesctwo">
+            <span>Vote To List round 3</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="promoann__selfkey">
+        <div class="promoann__selfkeyvideo">
+          <button><i class="fa fa-play" aria-hidden="true"></i></button>
+        </div>
+        <div class="promoann__selfkeydesc">
+          <div class="promoann__selfkeydescone">
+            <span>Selfkey Will Get Listed On Bitmin</span>
+            <span>05:48</span>
+          </div>
+          <div class="promoann__selfkeydesctwo">
+            <span>My Selfkey</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="promoann__canya">
+        <div class="promoann__canyavideo">
+          <button><i class="fa fa-play" aria-hidden="true"></i></button>
+        </div>
+        <div class="promoann__canyadesc">
+          <div class="promoann__canyadescone">
+            <span>Canya is Getting Listed One</span>            
+          </div>
+          <div class="promoann__canyadesctwo">
+            <span>Bitmin With A Special Promotion</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="promoann__qlink">
+        <div class="promoann__qlinkvideo">
+          <button><i class="fa fa-play" aria-hidden="true"></i></button>
+        </div>
+        <div class="promoann__qlinkdesc">
+          <div class="promoann__qlinkdescone">
+            <span>Qlink On Bitmin: Trading Stars On</span>            
+          </div>
+          <div class="promoann__qlinkdesctwo">
+            <span>January 29 2018</span>
+          </div>
+        </div>
+      </div>
+
     </div>
 
 
